--- a/TP3/style.css
+++ b/TP3/style.css
@@ -1,65 +1,216 @@
-head {
-    font-size: 16px;
-    color: #333;
+/* header */
+
+body > header {
+  background-color: #046dd5;
+  color: white;
+
+  padding: 1em;
 }
+
+body > header h1, body > header h2{
+  margin: 0;
+}
+
+body > header a {
+  color: white;
+  text-decoration: none;  
+}
+
+body > header #signup a:first-child {
+  border-right: 1px solid white;
+}
+
+body > header #signup {
+  margin-top: 1em;
+}
+
+body > header #signup a {
+  padding: 0 1em;
+}
+
+body > header #signup a:first-child {
+  padding-left: 0;
+}
+
+/* navigation */
+
+#menu ul {
+  margin: 0;
+  padding: 0;
+}
+
+#menu li {
+  background-color: white;
+  text-align: center;
+
+  list-style-type: none;
+
+  padding: 1em 0;
+}
+
+#menu li a{
+  color: black;
+  text-decoration: none;
+}
+
+#menu li:hover {
+  background-color: #2a2f33;
+}
+
+#menu li:hover a{
+  color: white;
+}
+
+#hamburger, .hamburger {
+  display: none;
+}
+
+/* article */
+
+#news header {
+  max-width: 10em;
+  padding: 1em;
+  position: absolute;
+}
+
+#news header h1{
+  margin: 0;
+
+  text-shadow: .2em .2em .2em black;
+}
+
+#news header a{
+  color: white;
+  text-decoration: none;
+}
+
+#news img {
+  width: 100%;
+}
+
+#news > article {
+  background-color: white;
+
+  margin: 1em 0;
+}
+
+#news > article > p{
+  padding: 0 1em;
+}
+
+#news > article > p:first-of-type:first-letter{
+  font-size: 2em;
+}
+
+#news footer {
+  color: white;
+  background-color: #f4655f;
+
+  padding: 1em;
+}
+
+#news footer a{
+  color: white;
+  text-decoration: none;
+  border-bottom: 1px solid white;
+  padding-bottom: 2px;
+}
+
+#news footer .tags {
+  margin-right: 1em;
+}
+
+#news footer .comments {
+  margin-left: 1em;
+}
+
+#news footer .comments:after {
+  content: ' comments';
+}
+
+#news footer .author:before{
+  content: "By ";
+}
+
+/* related */
+
+#related {
+  background-color: #2a2f33;
+
+  padding: 1em;
+}
+
+#related h1 a {
+  color: white;
+  text-decoration: none;
+}
+
+#related p {
+  color: white;
+}
+
+/* footer */
+
+body > footer {
+  background-color: #2a2f33;
+  color: white;
+
+  padding: 1em;
+
+  height: 1em;
+}
+
+body > footer p {
+  margin: 0;
+}
+
+/* fonts */ 
+
+@import url('https://fonts.googleapis.com/css?family=Lora:400,700|Poppins:400,700');
+
 body {
-    font-family: "Poppins";
-    background-color: #ffffff;
+  font-family: "Poppins", sans-serif;
 }
-header {
-    background-color: #046DD5;
-    line-height: 1em;
-    padding: 1em;
+
+p {
+  font-family: "Lora", serif;
+  line-height: 1.4em;
 }
-header a {
-    text-decoration: none;
-    color: #fff;
+
+body > header h2 {
+  font-weight: normal;
 }
-header h1 a {
-    font-weight: 600;
+
+#news header {
+  font-size: 1.5em;
 }
-header h2 a {
-    font-weight: lighter;
+
+#news footer {
+  font-size: 0.8em;
 }
-div[id="signup"] a[href="register.html"] {
-    padding-right: 15px;
-    border-right: 1px solid #ffffff;
+
+/* section colors */
+
+#menu li:nth-child(1) {
+  border-top: 5px solid #e1493e;
 }
-div[id="signup"] a[href="login.html"] {
-    padding-left: 15px;
+
+#menu li:nth-child(2) {
+  border-top: 5px solid #8aba56;
 }
-nav input {
-    display: none;
+
+#menu li:nth-child(3) {
+  border-top: 5px solid #5b4282;
 }
-ul {
-    margin: 0;
-    padding: 0;
+
+#menu li:nth-child(4) {
+  border-top: 5px solid #ff8932;
 }
-ul li {
-    list-style-type: none;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
+
+#menu li:nth-child(5) {
+  border-top: 5px solid #19b6e9;
 }
-ul li a {
-    text-decoration: none;
-    color: #333;
-}
-ul li:nth-child(1) {
-    border-top: #E1493E 6px solid;
-}
-ul li:nth-child(2) {
-    border-top: #8ABA56 6px solid;
-}
-ul li:nth-child(3) {
-    border-top: #5B4282 6px solid;
-}
-ul li:nth-child(4) {
-    border-top: #FF8932 6px solid;
-}
-ul li:nth-child(5) {
-    border-top: #19B6E9 6px solid;
-}
-ul li:nth-child(6) {
-    border-top: #E84C8B 6px solid;
+
+#menu li:nth-child(6) {
+  border-top: 5px solid #e84c8b;
 }
