Ain't even joking: I centered a div ahah

--- a/TP3/forms.css
+++ b/TP3/forms.css
@@ -33,7 +33,7 @@ body > section > form input:focus {
   border-bottom: 1px solid #046dd5;
 }
 
-body > section > form h1, #login h1 {
+body > section > form h1, #login h1 , #register h1 {
   text-align: center;
 }
 @media (max-width: 30em) {
